Updated for consistency

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Illallangi Enterprises PKI
+title: Illallangi Enterprises DN42
 owner: Andrew Cole
 email: andrew.cole@illallangi.com
 description: >-
-  Security is Everyone's Responsibility
+  Experimental Networking
 baseurl: ""
 url: "https://illallangi.enterprises"
 twitter_username: "illallangi"
